--- a/_pages/dept/assessor/taxexemptproperty.html
+++ b/_pages/dept/assessor/taxexemptproperty.html
@@ -7,13 +7,8 @@ permalink: /assessor/taxexemptproperty.html
   <div class="panel-body">
     <p>The Latah County Board of Commissioners adopted Ordinance No. 265, which sets up a standardized procedure to approve property tax exemptions annually.</p>
     <p><b>Application deadline is April 15th.</b></p>
+    <p>NOTE: The Exemption Renewal forms, applications and worksheets are located in the Forms and Files section.</p>
 
-  </div>
-</div>
-
-<div class="panel panel-default" >
-  <div class="panel-body">
-    The Exemption Renewal forms, applications and worksheets are located in the Forms and Files section.
   </div>
 </div>
 
@@ -78,5 +73,96 @@ permalink: /assessor/taxexemptproperty.html
       </div>
     </div>
 
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+            What happens if my (or my organization's) property is currently exempt from taxation, but I do not apply?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseFive" class="collapse">
+        <div class="panel-body">
+          If an application is not submitted within the applicable time limits, your property will be subject to property taxes.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+            What property can be exempted from property taxes?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseSix" class="collapse">
+        <div class="panel-body">
+          Idaho Code sets forth what property is exempt from taxation. Most of these exemptions are found in title 63, chapter 6 of the Idaho Code. Examples are government property, schools, churches, charitable, fraternal and service organizations, hospitals and cemeteries.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+            How can I find out if, and under what criteria, property may be exempt from taxation?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseSeven" class="collapse">
+        <div class="panel-body">
+          Idaho Code title 63, chapter 6 is available on the web or at the Latah County Courthouse in the Assessor's office.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+            Will my church still qualify for exemption from property taxation if we allow non-church related groups use our building when we are not using it?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseEight" class="collapse">
+        <div class="panel-body">
+          Under Idaho Code 63-602B, property is exempt from taxation if it is owned by a religious corporation or society and is used "exclusively" for religious worship, educational purposes, or recreational activities. The question has come up, will a church lose its exemption from property taxation if the church allows a non-profit, non-church related group use its building.  While a strict interpretation of this statute may lead to that conclusion, the Latah County Board of Commissioners (BOCC) recognizes the value most, if not all, churches in Latah County provide to the local communities by allowing non-profit, non-church related groups use their buildings as a meeting place. Many times, a church is the only affordable or available meeting place for an organization. Thus, in recognizing the value that churches provide to the local community by allowing local non-profit community groups use the church building, the BOCC recognizes this use as falling within the uses that qualify for tax exemption under the charitable organization tax exemption, Idaho Code 63-602C.
+          However, the BOCC does not believe that allowing a for-profit business (examples include, but are not limited to, an oriental rug business, Amway, Mary Kay, etc.) to use the building qualifies for this exemption. Thus, if your church allows a for profit business, or an individual for a business purpose, to use the property, the church runs the risk of losing its property tax exemption.
+          Therefore, if your church allows non-profit, non-church related groups use the church building, apply for the property tax exemption under both Idaho Code 63-602B, the religious exemption, and Idaho Code 63-602C, the charitable exemption.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
+            What if my church charges a "cleaning fee" to non-church related groups that use the building?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseNine" class="collapse">
+        <div class="panel-body">
+          If the church charges a nominal fee intended to cover the out of pocket expenses, such as insurance, electricity, cleaning, etc., that the church may incur in allowing a non-profit, non-church related group to use the church property, the property will still qualify for exemption under Idaho Code 63-602C, the charitable exemption.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
+            If I have questions about applying for tax exemption, who should I contact?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseTen" class="collapse">
+        <div class="panel-body">
+          For questions about your application for exemption, contact the Prosecutor's Office at 883-2246 or the Assessor's office at 883-5710, or email to assessor.
+        </div>
+      </div>
+    </div>
 
 </div>
