--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -96,9 +96,9 @@ tree: true
 				<h3 class="text-center">Our Services</h3>
 			</div>
 			<div class="list-group">
-				<li class="list-group-item">Manage Solid Waste Fees</li>
-				<li class="list-group-item">Negotiates Contracts</li>
-				<li class="list-group-item">Manages Billing and Collection</li>
+				<li class="list-group-item text-center">Manage Solid Waste Fees</li>
+				<li class="list-group-item text-center">Negotiates Contracts</li>
+				<li class="list-group-item text-center">Manages Billing and Collection</li>
 			</div>
 		</div>
 
@@ -108,25 +108,25 @@ tree: true
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="text-center">Additional Information</h3>
-				<hr>
-				<button type="button" href="billing.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Billing Procedures</button>
-				<button type="button" href="onlinepayments.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Online Payments</button>
-				<button type="button" href="bulkywaste.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Bulky Waste</button>
-				<button type="button" href="commercialaccounts.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Commercial Billing</button>
-				<button type="button" href="drivewayservice.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Driveway Service</button>
-				<button type="button" href="empiredisposal.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Empire Disposal Accounts</button>
-				<button type="button" href="exemptioninfo.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Exemption Information</button>
-				<button type="button" href="hazardouswaste.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Household Hazardous Waste</button>
-				<button type="button" href="holidaycollection.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Holiday Collection Schedule</button>
-				<button type="button" href="moscowrecycling.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Moscow Recycling Center Services</button>
-				<button type="button" href="ruralrecycling.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Rural Recycling Program</button>
-				<button type="button" href="advisorycommittee.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Solid Waste Advisory Committee (SWAC)</button>
-				<button type="button" href="processingfacility.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Solid Waste Processing Facility (SWPF)</button>
+			</div>
+			<div class="list-group">
+				<a href="billing.html" data-remote="false" class="list-group-item text-center" data-toggle="modal" data-target="#myModal">Billing Procedures</a>
+				<a href="onlinepayments.html" data-remote="false" class="list-group-item text-center" data-toggle="modal" data-target="#myModal">Online Payments</a>
+				<a href="bulkywaste.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Bulky Waste</a>
+				<a href="commercialaccounts.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Commercial Billing</a>
+				<a href="drivewayservice.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Driveway Service</a>
+				<a href="empiredisposal.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Empire Disposal Accounts</a>
+				<a href="exemptioninfo.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Exemption Information</a>
+				<a href="hazardouswaste.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Household Hazardous Waste</a>
+				<a href="holidaycollection.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Holiday Collection Schedule</a>
+				<a href="moscowrecycling.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Moscow Recycling Center Services</a>
+				<a href="ruralrecycling.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Rural Recycling Program</a>
+				<a href="advisorycommittee.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Solid Waste Advisory Committee (SWAC)</a>
+				<a href="processingfacility.html" data-remote="false" class="list-group-item text-center"  data-toggle="modal" data-target="#myModal">Solid Waste Processing Facility (SWPF)</a>
 			</div>
 		</div>
 
 		<!-- forms -->
-
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h4 class=" text-center">Solid Waste Forms and Files</h4>
