--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -28,7 +28,7 @@ tree: true
           {% for notice in site.data.notices %}
           {% if notice.department == 'Assessor' %}
 
-          <a href="{{ notice.url }}" target="{{ notice.target }}" rel="noopener" class="list-group-item text-center " >
+          <a href="{{ notice.url }}" target="{{ notice.target }}" rel="noopener" class="list-group-item text-center list-link" >
             {{ notice.title }}
           </a>
 
@@ -45,7 +45,7 @@ tree: true
         <div class="list-group">
           {% for news in site.data.news %}
           {% if news.department == 'Assessor' %}
-          <a href="{{ news.url }}" target="{{ news.target }}" rel="noopener" class="text-center list-group-item" >
+          <a href="{{ news.url }}" target="{{ news.target }}" rel="noopener" class="text-center list-group-item list-link" >
             {{ news.title }}
             {% endif %}
           </a>
@@ -76,10 +76,10 @@ tree: true
         <h3 class="text-center">Additional Information</h3>
       </div>
          <div class="list-group">
-          <a href="assessorfaq.html" class="list-group-item text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>
-          <a href="https://tax.idaho.gov/i-1051.cfm#sub1" class="list-group-item text-center" target="_blank">Homeowners & Property Tax</a>
-          <a href="https://gis.latah.id.us/parcelviewer/index.html"  class="list-group-item text-center" target="_blank">Latah County Parcel Viewer</a>
-          <a href="taxexemptproperty.html" class="list-group-item text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Tax Exempt Property & FAQ</a>
+          <a href="assessorfaq.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Assessor FAQ</a>
+          <a href="https://tax.idaho.gov/i-1051.cfm#sub1" class="list-group-item list-link text-center" target="_blank">Homeowners & Property Tax</a>
+          <a href="https://gis.latah.id.us/parcelviewer/index.html"  class="list-group-item list-link text-center" target="_blank">Latah County Parcel Viewer</a>
+          <a href="taxexemptproperty.html" class="list-group-item list-link text-center" data-remote="false" data-toggle="modal" data-target="#myModal">Tax Exempt Property & FAQ</a>
         </div>
     </div>
 
