Added DMV content, minor tweak to SW page.

--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -8,6 +8,7 @@ tree: true
 	<div class="col-md-8">
 
 		<!-- Department Description -->
+		<div class="col-md-12">
 			<div class="panel panel-default">
 				<p class="panel-body">
 					Under the supervision of the County Commissioners the Solid Waste office sets fees and negotiates contracts with government and private entities. Billing procedures and collection of fees are managed by the Solid Waste Department. We strive to resolve problems incurred by ratepayers with payments or with any of the services included.<br><br>
@@ -18,6 +19,7 @@ tree: true
 					The local landfill, located at the Solid Waste Processing Facility on Highway 8 is for non-municipal (inert demolition) solid waste.<br><br>
 				</p>
 			</div>
+		</div>
 		<!-- End Description -->
 
 		<div class="container col-md-6" id="notices">
