--- a/_pages/home.html
+++ b/_pages/home.html
@@ -95,9 +95,12 @@ permalink: /
               <h4>Social</h4>
             </li>
             <li class="list-group-item">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <div class="row text-center">
+                  <a href="https://www.facebook.com/LatahCountyID/" target="_blank" rel="noopener" class="btn"><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
+                  <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
+                  <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
+                  <a href="/contact/" class="btn"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a>
+                </div>
             </li>
           </ul>
         </ul>
