--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -3,6 +3,7 @@ layout: page
 title: Solid Waste Department
 permalink: /solid_waste/
 tree: true
+news: true
 ---
 <div class="row">
 	<div class="col-md-8">
@@ -28,13 +29,7 @@ tree: true
 					<h3 class="text-center">Notices</h3>
 				</div>
 				<div class="list-group">
-					{% for notice in site.data.notices %}
-					{% if notice.department == 'SolidWaste' %}
-					<a href="{{ notice.url }}" target="{{ notice.target }}" rel="noopener" class="list-group-item text-center list-link">
-						{{ notice.title }}
-					</a>
-					{% endif %}
-					{% endfor %}
+					<div id="swNotices" class="list-group-item"></div>
 				</div>
 			</div>
 		</div>
@@ -44,22 +39,10 @@ tree: true
 					<h3 class="text-center">News</h3>
 				</div>
 				<div class="list-group">
-					{% for news in site.data.news %}
-					{% if news.department == 'SolidWaste' %}
-					<a href="{{ news.url }}" target="{{ news.target }}" rel="noopener" class="list-group-item text-center list-link">
-						{% if news.title == null  %}
-						<h5>No news at this time.</h5>
-						{% else %}
-							{{ news.title }}
-						{% endif %}
-					</a>
-					{% endif %}
-					{% endfor %}
+					<div id="swNews" class="list-group-item"></div>
 				</div>
 			</div>
 		</div>
-
-
 
 		<div class="col-md-12">
 			<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
@@ -178,4 +161,10 @@ $(document).ready(function(){
 
 <script type="text/javascript">
 deptTree("swDir", "SolidWaste")
+</script>
+
+<script type="text/javascript">
+//p1=control id, p2=department, p3=article type
+getNewsandNotices("swNews", "SW", "News")
+getNewsandNotices("swNotices", "SW", "Notice")
 </script>
