--- a/_pages/home.html
+++ b/_pages/home.html
@@ -19,42 +19,8 @@ permalink: /
   </div>
 </div>
 <div class="row" id="infoRow">
-  <div class="container col-md-4" id="notices">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="text-center">Notices</h3>
-      </div>
-        <div class="list-group">
-          {% for notice in site.data.notices %}
-            {% if notice.home %}
-              <a href="{{ notice.url }}" target="{{ notice.target }}" rel="noopener" class="list-group-item list-link text-center">
-                {{ notice.title }}
-              </a>
-            {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-  <div class="container col-md-4" id="news">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="text-center">News</h3>
-      </div>
-      <div class="list-group">
-        {% for news in site.data.news %}
-         {% if news.home %}
-          <a href="{{ news.url }}" target="{{ news.target }}" rel="noopener" class="list-group-item list-link text-center">
-            {% if news.title == null  %}
-              <h4>No news at this time.</h4>
-            {% else %}
-              {{ news.title }}
-            {% endif %}
-          </a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </div>
-  </div>
+  {% include notices.html %}
+  {% include news.html %}
   <div class="container col-md-4" id="contact">
     <div class="panel panel-default">
       <div class="panel-heading">
