--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -29,7 +29,7 @@ news: true
 					<h3 class="text-center">Notices</h3>
 				</div>
 				<div class="list-group">
-					<div id="swNotice" class="list-group-item"></div>
+					<div id="swNotice" ></div>
 				</div>
 			</div>
 		</div>
@@ -39,7 +39,7 @@ news: true
 					<h3 class="text-center">News</h3>
 				</div>
 				<div class="list-group">
-					<div id="swNews" class="list-group-item"></div>
+					<div id="swNews" ></div>
 				</div>
 			</div>
 		</div>
