--- a/_pages/dept/dmv/home.html
+++ b/_pages/dept/dmv/home.html
@@ -2,6 +2,7 @@
 layout: page
 title: Department of Motor Vehicles
 permalink: /dmv/
+news: true
 ---
 
 <div class="row">
@@ -23,13 +24,7 @@ permalink: /dmv/
           <h3 class="text-center">Notices</h3>
         </div>
         <div class="list-group">
-          {% for notice in site.data.notices %}
-          {% if notice.department == 'DMV' %}
-          <a href="{{ notice.url }}" target="{{ notice.target }}" rel="noopener" class="list-group-item text-center list-link">
-            {{ notice.title }}
-          </a>
-          {% endif %}
-          {% endfor %}
+        	<div id="dmvNotice" ></div>
         </div>
       </div>
     </div>
@@ -39,17 +34,7 @@ permalink: /dmv/
           <h3 class="text-center">News</h3>
         </div>
         <div class="list-group">
-          {% for news in site.data.news %}
-          {% if news.department == 'DMV' %}
-          <a href="{{ news.url }}" target="{{ news.target }}" rel="noopener" class="list-group-item text-center list-link">
-            {% if news.title == null  %}
-            <h5>No news at this time.</h5>
-            {% else %}
-              {{ news.title }}
-            {% endif %}
-          </a>
-          {% endif %}
-          {% endfor %}
+					<div id="dmvNews" ></div>
         </div>
       </div>
     </div>
@@ -109,4 +94,11 @@ $(document).ready(function(){
 		$(this).find(".modal-body").load(link.attr("href"));
 	});
 });
+</script>
+
+<script type="text/javascript">
+//args contains the list of control elements that needs to be examined
+const args = ['dmvNews', 'dmvNotice'];
+//pass in the args array and the department
+getNewsandNotices(args, "DMV")
 </script>
