--- a/_pages/dept/dmv/home.html
+++ b/_pages/dept/dmv/home.html
@@ -10,9 +10,7 @@ news: true
     <!-- Department Description -->
     <div class="col-md-12">
 			<div class="panel panel-default">
-				<p class="panel-body">
-					Administered by the <a href="/assessor/">County Assessor</a>, the Motor Vehicle Licensing office transfers titles and registrations on new, used and out-of-state automobiles and manufactured homes, collects sales tax on private sales and out-of-state dealers, registers and titles recreational vehicles and vessels, adds liens and clears titles, and registers previously owned vehicles, and when necessary, performs Vehicle Identification Number (VIN) inspections. This department is located at the Latah County Annex at 200 S. Almon Street in Moscow.
-				</p>
+				<p class="panel-body">Administered by the <a href="/assessor/">County Assessor</a>, the Motor Vehicle Licensing office transfers titles and registrations on new, used and out-of-state automobiles and manufactured homes, collects sales tax on private sales and out-of-state dealers, registers and titles recreational vehicles and vessels, adds liens and clears titles, and registers previously owned vehicles, and when necessary, performs Vehicle Identification Number (VIN) inspections. This department is located at the Latah County Annex at 200 S. Almon Street in Moscow.</p>
 			</div>
     </div>
 		<!-- End Description -->
